# firefly

./: Cargo.toml  firefly.json
.cargo/: config.toml
src/: lib.rs  main.rs  serial.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
